--- a/pom.xml
+++ b/pom.xml
@@ -113,12 +113,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <dependency>
-                <groupId>com.microsoft.azure</groupId>
-                <artifactId>applicationinsights-web</artifactId>
-                <!-- or applicationinsights-core for bare API -->
-                <version>[2.0,)</version>
-             </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -145,6 +139,13 @@
             <artifactId>jboss-jsf-api_2.2_spec</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!-- Import the Microsoft Appinsider dependency  -->
+         <dependency>
+                <groupId>com.microsoft.azure</groupId>
+                <artifactId>applicationinsights-web</artifactId>
+                <!-- or applicationinsights-core for bare API -->
+                <version>[2.0,)</version>
+             </dependency>
 
     </dependencies>
 
