--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
         <!-- Import the Microsoft Appinsider dependency  -->
          <dependency>
                 <groupId>com.microsoft.azure</groupId>
+                <artifactId>applicationinsights-core</artifactId>
+                <!-- or applicationinsights-core for bare API -->
+                <version>[2.0,)</version>
+             </dependency>
+         <dependency>
+                <groupId>com.microsoft.azure</groupId>
                 <artifactId>applicationinsights-web</artifactId>
                 <!-- or applicationinsights-core for bare API -->
                 <version>[2.0,)</version>
